force-app/main/default/objects/ExternalMailHistory__c/ExternalMailHistory__c.object-meta.xml
<CustomObject>
    <label>外部メール送信履歴</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>外部メール送信履歴名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>