force-app/main/default/objects/ExternalMailHistory__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>カスタマーセンターコールデータ</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>外部メール送信履歴</relationshipLabel>
    <relationshipName>ExternalMailHisory</relationshipName>
    <type>Lookup</type>
</CustomField>