force-app/main/default/objects/ExternalMailHistory__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>カスタマー連番</description>
    <formula>CaseId__r.CaseNumber</formula>
    <label>カスタマー連番</label>
    <type>Text</type>
</CustomField>