force-app/main/default/objects/ExternalMailHistory__c/fields/OfficeEmail__c.field-meta.xml
<CustomField>
    <fullName>OfficeEmail__c</fullName>
    <formula>CaseId__r.OfficeName__r.Email_Address__c</formula>
    <label>営業店メールアドレス</label>
    <type>Text</type>
</CustomField>