force-app/main/default/objects/ExternalMailHistory__c/fields/ReferenceAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>ReferenceAccountEmail__c</fullName>
    <formula>CaseId__r.ReferenceAccount__r.Email_Address__c</formula>
    <label>代理店メールアドレス</label>
    <type>Text</type>
</CustomField>